--- a/ig.ini
+++ b/ig.ini
@@ -3,8 +3,7 @@
 # see comments below for instructions
 
 ig = fsh-generated/resources/ImplementationGuide-my-ig.json
-#template = openhie.fhir.template#current
-template = #local-template
+template = openhie.fhir.template#current
 
 
 
@@ -15,11 +14,11 @@ template = #local-template
 
 #   ig: the name of the implementation guide resource file.
 examples:
-# ig = input/myig.xml
+#ig = input/myig.xml
 # ig = input/implementationguide-example2.xml
 
 # For sushi-generated IG (via sushi.config.yaml):
-# ig = fsh-generated/resources/myig.json
+ ig = fsh-generated/resources/myig.json
 
 #   template: the IG template that will be used to create the implementation guide (normally be a package name, but can be a local folder).
 #   base fhir template:
